--- a/page-templates/09082021_v2/css/main.css
+++ b/page-templates/09082021_v2/css/main.css
@@ -5,6 +5,8 @@
     font-family: Whitman-Roman;
     font-style: normal;
     font-weight: 400;
+    color: rgba(255, 255, 255, 1);
+    box-shadow: 0 5px 15px rgba(145, 92, 182, .4);
     font-display: swap;
     src: url(../fonts/Whitman-Roman.woff2) format("woff2"), url(../fonts/Whitman-Roman.woff) format("woff")
 }
@@ -183,8 +185,19 @@ a {
 
 .icon-arrow {
     width: 16px;
-    height: 16px
+    height: 16px;
+    border: 1px solid rgba(208, 23, 23, 0);
 }
+
+
+/*.icon-arrow:hover {*/
+/*    !*color: rgba(196, 62, 62, 0.82);*!*/
+/*    opacity:.5;*/
+/*    border: 5px solid rgba(194, 96, 96, 0.76);*/
+/*    width: 16px;*/
+/*    height: 0px;*/
+
+/*}*/
 
 .icon-arrow svg {
     stroke: white;
@@ -222,8 +235,8 @@ a {
 
 
 .icon-heart svg:hover {
-    -webkit-filter: drop-shadow( 3px 3px 2px rgba(145, 25, 25, 0.66));
-    filter: drop-shadow( 3px 3px 2px rgba(145, 25, 25, 0.66));
+    -webkit-filter: drop-shadow(3px 3px 2px rgba(145, 25, 25, 0.66));
+    filter: drop-shadow(3px 3px 2px rgba(145, 25, 25, 0.66));
     fill: rgb(119, 26, 22);
     /*text-shadow:0px 0px 30px #8c1d19;*/
     -moz-transition: all 0.2s ease-in;
@@ -232,8 +245,8 @@ a {
     transition: all 0.2s ease-in;
     width: 33px;
     height: 28px;
-    margin-left:-4px;
-    margin-top: -4px;
+    margin-left: -5px;
+    margin-top: -2px;
     fill-opacity: .8;
 
     /*z-index:1*/
@@ -277,10 +290,9 @@ a {
     transition: transform 0.33s;
     width: 41px;
     height: 41px;
-    background: rgba(133, 38, 30, 0.29) 0% 0% no-repeat  padding-box;
-border-radius: 50px;
-
-    /*box-shadow: 0px 0px 21px #00000022;*/
+    background: rgba(133, 38, 30, 0.29) 0% 0% no-repeat padding-box;
+    border-radius: 50px;
+    top: 10px;
     opacity: 1;
 }
 
@@ -291,13 +303,14 @@ border-radius: 50px;
     border-radius: 50%;
     background-color: #85261e
 }
+
 .button-arrow-red:hover {
-    transform: scale(1.025);
-    transition: transform 0.33s;
-    width: 41px;
-    height: 41px;
-    background: rgb(122, 37, 32) 0% 0% no-repeat  padding-box;
-    border-radius: 50px;
+    /*transform: scale(1.025);*/
+    /*transition: transform 0.33s;*/
+    /*width: 41px;*/
+    /*height: 41px;*/
+    /*background: rgb(122, 37, 32) 0% 0% no-repeat  padding-box;*/
+    /*border-radius: 50px;*/
 
 }
 
@@ -947,10 +960,10 @@ section.complete .button-next-slide-section-2 {
 }
 
 .button .icon {
-    padding: 13px;
-    box-sizing: content-box;
-    background: inherit;
-    border-radius: 50%;
+    /*padding: 13px;*/
+    /*box-sizing: content-box;*/
+    /*background: inherit;*/
+    /*border-radius: 50%;*/
 }
 
 
@@ -961,17 +974,20 @@ section.complete .button-next-slide-section-2 {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    opacity: 0.0;
-    background: rgba(185, 179, 175, 0.5);
+    /*opacity: 0.0;*/
+    background: rgb(136, 29, 25);
     transition: all 0.1667s;
 }
-.button-ripple:hover {
-    width: 41px;
-    height: 41px;
-    background: #85261E 0% 0% no-repeat padding-box;
-    /*box-shadow: 0px 0px 21px #00000022;*/
-    opacity: 1;
+
+.button:hover .button-ripple {
+    cursor: pointer;
+    border: 6px solid rgba(211, 191, 191, 0.67);
+    font-weight: 800;
+    background-color: #85261e;
+    color: rgba(220, 20, 60, 0.27);
+    margin: 0;
 }
+
 
 .complete > .button-ripple,
 .complete > * > .button-ripple,
@@ -1113,8 +1129,7 @@ section.complete .button-next-slide-section-2 {
 .section-29a__text,
 .section-23a__text,
 .section-27a__text,
-.section-28a__text
-{
+.section-28a__text {
     color: #707070;
     height: 100%;
     overflow: scroll;
@@ -1133,14 +1148,14 @@ section.complete .button-next-slide-section-2 {
 .section-2a__text-overlay.hidden {
     pointer-events: all;
 }
+
 /*s*/
 .section-2a__text p,
 .section-20a__text p,
 .section-29a__text p,
 .section-23a__text p,
 .section-27a__text p,
-.section-28a__text p
-{
+.section-28a__text p {
     font-family: Whitman-Roman, Arial, sans-serif;
     font-size: 15px;
     line-height: 1.6
@@ -1155,8 +1170,7 @@ section.complete .button-next-slide-section-2 {
 .section-29a__text h3,
 .section-23a__text h3,
 .section-27a__text h3,
-.section-28a__text h3
-{
+.section-28a__text h3 {
     margin-top: 20px;
     font-family: Roboto-Black, Arial, sans-serif;
     font-size: 19px;
@@ -3194,7 +3208,6 @@ section.complete .button-next-slide-section-2 {
 }
 
 
-
 .section-20a__text-shadow-after {
     content: "";
     position: absolute;
@@ -3207,9 +3220,6 @@ section.complete .button-next-slide-section-2 {
     background-image: -o-linear-gradient(top, hsla(0, 0%, 100%, 0), #f4f4f4);
     background-image: linear-gradient(180deg, hsla(0, 0%, 100%, 0), #f4f4f4)
 }
-
-
-
 
 
 .section-20a__text p span {
@@ -3500,7 +3510,6 @@ section.complete .button-next-slide-section-2 {
 }
 
 
-
 .section-23a__text-shadow-after {
     content: "";
     position: absolute;
@@ -3513,8 +3522,6 @@ section.complete .button-next-slide-section-2 {
     background-image: -o-linear-gradient(top, hsla(0, 0%, 100%, 0), #f4f4f4);
     background-image: linear-gradient(180deg, hsla(0, 0%, 100%, 0), #f4f4f4)
 }
-
-
 
 
 .section-23a__text p span {
@@ -4302,11 +4309,9 @@ section.complete .button-next-slide-section-2 {
 }
 
 
-
 .section-29a__text h3 {
-    color: #1C2D5A!important;
+    color: #1C2D5A !important;
 }
-
 
 
 .section-29a__quoter {
