--- a/page-templates/09082021_v2/css/main.css
+++ b/page-templates/09082021_v2/css/main.css
@@ -223,6 +223,11 @@ a {
     height: 32px;
 }
 
+.icon-heart-1{
+    width: 23px;
+    height: 18px;
+}
+
 .icon-heart,
 .icon-heart svg {
     width: 23px;
@@ -238,24 +243,18 @@ a {
     -webkit-filter: drop-shadow(3px 3px 2px rgba(145, 25, 25, 0.66));
     filter: drop-shadow(3px 3px 2px rgba(145, 25, 25, 0.66));
     fill: rgb(119, 26, 22);
-    /*text-shadow:0px 0px 30px #8c1d19;*/
+    transform: scale(1.45);
+
     -moz-transition: all 0.2s ease-in;
     -o-transition: all 0.2s ease-in;
     -webkit-transition: all 0.2s ease-in;
     transition: all 0.2s ease-in;
-    width: 33px;
-    height: 28px;
-    margin-left: -5px;
-    margin-top: -2px;
-    fill-opacity: .8;
 
-    /*z-index:1*/
-    /*opacity: 0.36;*/
 }
 
 
 .icon-heart-white {
-    fill: #fff
+    fill: #fff;
 }
 
 .icon-heart-red {
@@ -421,9 +420,13 @@ a {
     width: 23px;
     height: 18px
 }
+.button-heart-1 {
+    width: 23px;
+    height: 18px
+}
 
 .button-heart-header-top {
-    margin-left: 12px
+    margin-left: 12px;
 }
 
 .button-heart-header-left {
@@ -658,7 +661,7 @@ body.page-loaded .header-top {
 }
 
 
-.header-left-nav span, .hideMenu {
+.header-left-nav, .hideMenu {
     font-family: Roboto-Black, Arial, sans-serif;
 }
 
@@ -682,24 +685,23 @@ body.page-loaded .header-top {
 }
 
 .header-left-nav__note {
-    font-size: 11px;
+    font-size: 8px;
     line-height: 17px;
-    margin-top: -24px;
+    margin-top: -3px;
 }
 
 .header-left-nav__note-asterisk,
 .header-left-nav__note-text {
     float: left;
-
+    font: italic normal normal 12px/16px Whitman;!important;
 
 }
 
 
 .header-left-nav__note-asterisk {
-    font-weight: lighter;
-    width: 10px;
-    font-size: 40px;
-    margin-top: 6px;
+    position: absolute;
+    font-size: 31px;
+    margin-top: -12px;
 }
 
 .header-left-nav__note-text {
@@ -981,11 +983,12 @@ section.complete .button-next-slide-section-2 {
 
 .button:hover .button-ripple {
     cursor: pointer;
-    border: 6px solid rgba(211, 191, 191, 0.67);
+    transform: scale(1.45);
+    border: 8px solid rgba(211, 191, 191, 0.67);
     font-weight: 800;
-    background-color: #85261e;
-    color: rgba(220, 20, 60, 0.27);
-    margin: 0;
+    background-color: #812820;
+    /*color: rgb(201, 169, 167);*/
+    /*margin: 0;*/
 }
 
 
@@ -3273,7 +3276,7 @@ section.complete .button-next-slide-section-2 {
 }
 
 .section-21__pretitle {
-    margin-top: 46px;
+    margin-top: 100px;
     left: 240px;
     font-size: 34px;
     line-height: 41px;
@@ -3355,7 +3358,7 @@ section.complete .button-next-slide-section-2 {
 }
 
 .section-22__pretitle {
-    margin-top: 46px;
+    margin-top: 100px;
     left: 240px;
     font-size: 34px;
     line-height: 41px;
