adjsuted image sizes and crop some

--- a/page-templates/09082021_v2/css/main.css
+++ b/page-templates/09082021_v2/css/main.css
@@ -2279,6 +2279,7 @@ section.complete .button-next-slide-section-2 {
     top: 50%;
     left: 0;
     width: 80%;
+    height: auto;
     min-height: 105%;
     transform: translateY(-50%);
 }
