adjusted nav submenu

--- a/page-templates/09082021_v2/css/main.css
+++ b/page-templates/09082021_v2/css/main.css
@@ -601,14 +601,14 @@ body.page-loaded .header-top {
     line-height: 28px;
 }
 
-.hideMenu.submenu {
+.submenu {
     font-size: 13px;
     font-family: "Roboto Light";!important;
     color: gray;
     cursor: pointer;
 }
 
-.hideMenu.submenu:hover {
+.submenu:hover {
     color: #1C2D5A;
 }
 
