--- a/page-templates/09082021_v2/css/main.css
+++ b/page-templates/09082021_v2/css/main.css
@@ -193,6 +193,7 @@ a {
     width: 16px;
     height: 16px;
     transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
     stroke: white;
 }
 
