fixed catalyst and nav links

--- a/page-templates/09082021_v2/css/main.css
+++ b/page-templates/09082021_v2/css/main.css
@@ -653,6 +653,11 @@ body.page-loaded .header-top {
     color: #384E83;
 }
 
+ .visitSpan {
+     font-weight: 450;
+     color: #493f37;
+}
+
 
  .hideMenu {
     font-family: Roboto-Black;
@@ -1262,7 +1267,7 @@ section.complete .button-next-slide-section-2 {
 
 .section-3__title-wrapper {
     position: relative;
-    top: calc(30% + 36px);
+    top: calc(30% + 38px);
     left: calc(50% + 101px);
     width: 850px;
     transform: translateX(-50%) translateY(-50%);
