--- a/page-templates/09082021_v2/css/main.css
+++ b/page-templates/09082021_v2/css/main.css
@@ -1717,7 +1717,7 @@ section.complete .button-next-slide-section-2 {
     background-color: #f4f4f4;
 }
 
-.section-6__background {
+.section-6__background .section-7__background{
     position: absolute;
     top: 0;
     left: 0;
@@ -1770,19 +1770,19 @@ section.complete .button-next-slide-section-2 {
     background-color: #f4f4f4;
 }
 
-.section-7__background {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url(../images/saam-two-40b-bw.png);
-    background-position: 50%;
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    background-size: cover;
-    transform: scale(1.05);
-}
+/*.section-7__background {*/
+/*    position: absolute;*/
+/*    top: 0;*/
+/*    left: 0;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    background-image: url(../images/saam-two-40b-bw.png);*/
+/*    background-position: 50%;*/
+/*    background-repeat: no-repeat;*/
+/*    -webkit-background-size: cover;*/
+/*    background-size: cover;*/
+/*    transform: scale(1.05);*/
+/*}*/
 
 .section-7__text {
     position: relative;
@@ -2282,9 +2282,13 @@ section.complete .button-next-slide-section-2 {
 }
 
 .section-12__image img {
+    background-image: url("../images/section-12.jpg");
+    background-position: 50%;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
     position: absolute;
     top: 50%;
-    left: 0;
     width: 80%;
     min-height: 105%;
     transform: translateY(-50%);
@@ -2292,7 +2296,7 @@ section.complete .button-next-slide-section-2 {
 
 .section-12__image .section-12__imageshorttext {
     position: absolute;
-    right: 41rem;
+    /*right: 41rem;*/
     bottom: 23px;
     font-family: Roboto-Regular, Arial, sans-serif;
     font-size: 14px;
@@ -2424,10 +2428,15 @@ section.complete .button-next-slide-section-2 {
     height: 100%;
 }
 
+
 .section-13__image img {
+    background-image: url("../images/section-13.jpg");
+    background-position: 50%;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
     position: absolute;
     top: 50%;
-    left: 0;
     width: 80%;
     min-height: 105%;
     transform: translateY(-50%);
@@ -2542,17 +2551,21 @@ section.complete .button-next-slide-section-2 {
 }
 
 .section-14__image img {
+    background-image: url("../images/section-14.jpg");
+    background-position: 50%;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
     position: absolute;
     top: 50%;
-    left: 0;
     width: 80%;
-    min-height: 100%;
+    min-height: 105%;
     transform: translateY(-50%);
 }
 
 .section-14__image .section-14__imageshorttext {
     position: absolute;
-    right: 41rem;
+    /*right: 41rem;*/
     bottom: 23px;
     font-family: Roboto-Regular, Arial, sans-serif;
     font-size: 14px;
@@ -2671,9 +2684,13 @@ section.complete .button-next-slide-section-2 {
 }
 
 .section-15__image img {
+    background-image: url("../images/section-15rev.jpg");
+    background-position: 50%;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
     position: absolute;
     top: 50%;
-    left: 0;
     width: 80%;
     min-height: 105%;
     transform: translateY(-50%);
@@ -2681,7 +2698,6 @@ section.complete .button-next-slide-section-2 {
 
 .section-15__image .section-15__imageshorttext {
     position: absolute;
-    left: 35px;
     bottom: 23px;
     font-family: Roboto-Regular, Arial, sans-serif;
     font-size: 14px;
