--- a/page-templates/09082021_v2/css/main.css
+++ b/page-templates/09082021_v2/css/main.css
@@ -1717,7 +1717,7 @@ section.complete .button-next-slide-section-2 {
     background-color: #f4f4f4;
 }
 
-.section-6__background .section-7__background{
+.section-6__background {
     position: absolute;
     top: 0;
     left: 0;
@@ -1770,19 +1770,19 @@ section.complete .button-next-slide-section-2 {
     background-color: #f4f4f4;
 }
 
-/*.section-7__background {*/
-/*    position: absolute;*/
-/*    top: 0;*/
-/*    left: 0;*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*    background-image: url(../images/saam-two-40b-bw.png);*/
-/*    background-position: 50%;*/
-/*    background-repeat: no-repeat;*/
-/*    -webkit-background-size: cover;*/
-/*    background-size: cover;*/
-/*    transform: scale(1.05);*/
-/*}*/
+.section-7__background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(../images/saam-two-40b-bw.png);
+    background-position: 50%;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
+    transform: scale(1.05);
+}
 
 .section-7__text {
     position: relative;
